--- a/phydms_analyzeselection_prog.html
+++ b/phydms_analyzeselection_prog.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>the phydms_analyzeselection program &mdash; phydms 1.2.3 documentation</title>
+    <title>the phydms_analyzeselection program &mdash; phydms 1.2.4 documentation</title>
     
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '1.2.3',
+        VERSION:     '1.2.4',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="phydms 1.2.3 documentation" href="index.html" />
+    <link rel="top" title="phydms 1.2.4 documentation" href="index.html" />
     <link rel="up" title="auxiliary programs" href="auxiliary_progs.html" />
     <link rel="next" title="the phydms_renumber program" href="phydms_renumber_prog.html" />
     <link rel="prev" title="the phydms_plotselection program" href="phydms_plotselection_prog.html" /> 
@@ -45,7 +45,7 @@
         <li class="right" >
           <a href="phydms_plotselection_prog.html" title="the phydms_plotselection program"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 1.2.3 documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 1.2.4 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="auxiliary_progs.html" accesskey="U">auxiliary programs</a> &raquo;</li> 
       </ul>
     </div>  
@@ -89,7 +89,7 @@
                                <span class="p">[</span><span class="o">--</span><span class="n">labelselectedsites</span><span class="p">]</span> <span class="p">[</span><span class="o">--</span><span class="n">fdr</span> <span class="n">FDR</span><span class="p">]</span>
                                <span class="p">[</span><span class="o">--</span><span class="n">maxlog10p</span> <span class="n">MAXLOG10P</span><span class="p">]</span> <span class="p">[</span><span class="o">--</span><span class="n">groupbyname</span><span class="p">]</span>
                                <span class="p">[</span><span class="o">--</span><span class="n">diffprefsline</span> <span class="n">DIFFPREFSLINE</span><span class="p">]</span> <span class="p">[</span><span class="o">--</span><span class="n">nolegend</span><span class="p">]</span>
-                               <span class="p">[</span><span class="o">--</span><span class="n">dNdSlabel</span><span class="p">]</span>
+                               <span class="p">[</span><span class="o">--</span><span class="n">dNdSlabel</span><span class="p">]</span> <span class="p">[</span><span class="o">-</span><span class="n">v</span><span class="p">]</span>
                                <span class="n">outprefix</span> <span class="n">selectionfiles</span> <span class="p">[</span><span class="n">selectionfiles</span> <span class="o">...</span><span class="p">]</span>
 </pre></div>
 </div>
@@ -191,6 +191,9 @@
 <kbd><span class="option">--dNdSlabel=False</span></kbd></td>
 </tr>
 <tr><td>&nbsp;</td><td>Label omega-by-site plots with &#8216;dN/dS&#8217; rather than &#8216;omega_r&#8217;.</td></tr>
+<tr><td class="option-group">
+<kbd><span class="option">-v</span>, <span class="option">--version</span></kbd></td>
+<td>show program&#8217;s version number and exit</td></tr>
 </tbody>
 </table>
 </dd>
@@ -328,7 +331,7 @@
         <li class="right" >
           <a href="phydms_plotselection_prog.html" title="the phydms_plotselection program"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 1.2.3 documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 1.2.4 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="auxiliary_progs.html" >auxiliary programs</a> &raquo;</li> 
       </ul>
     </div>
