--- a/phydms_comprehensive_prog.html
+++ b/phydms_comprehensive_prog.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>the phydms_comprehensive program &mdash; phydms 1.2.3 documentation</title>
+    <title>the phydms_comprehensive program &mdash; phydms 1.2.4 documentation</title>
     
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '1.2.3',
+        VERSION:     '1.2.4',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,9 +24,9 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="phydms 1.2.3 documentation" href="index.html" />
+    <link rel="top" title="phydms 1.2.4 documentation" href="index.html" />
     <link rel="up" title="auxiliary programs" href="auxiliary_progs.html" />
-    <link rel="next" title="the phydms_plotselection program" href="phydms_plotselection_prog.html" />
+    <link rel="next" title="the phydms_prepalignment program" href="phydms_prepalignment.html" />
     <link rel="prev" title="auxiliary programs" href="auxiliary_progs.html" /> 
   </head>
   <body role="document">
@@ -40,12 +40,12 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="phydms_plotselection_prog.html" title="the phydms_plotselection program"
+          <a href="phydms_prepalignment.html" title="the phydms_prepalignment program"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="auxiliary_progs.html" title="auxiliary programs"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 1.2.3 documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 1.2.4 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="auxiliary_progs.html" accesskey="U">auxiliary programs</a> &raquo;</li> 
       </ul>
     </div>  
@@ -297,8 +297,8 @@
   <p class="topless"><a href="auxiliary_progs.html"
                         title="previous chapter">auxiliary programs</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="phydms_plotselection_prog.html"
-                        title="next chapter">the <code class="docutils literal"><span class="pre">phydms_plotselection</span></code> program</a></p>
+  <p class="topless"><a href="phydms_prepalignment.html"
+                        title="next chapter">the <code class="docutils literal"><span class="pre">phydms_prepalignment</span></code> program</a></p>
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
@@ -330,12 +330,12 @@
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
         <li class="right" >
-          <a href="phydms_plotselection_prog.html" title="the phydms_plotselection program"
+          <a href="phydms_prepalignment.html" title="the phydms_prepalignment program"
              >next</a> |</li>
         <li class="right" >
           <a href="auxiliary_progs.html" title="auxiliary programs"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 1.2.3 documentation</a> &raquo;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 1.2.4 documentation</a> &raquo;</li>
           <li class="nav-item nav-item-1"><a href="auxiliary_progs.html" >auxiliary programs</a> &raquo;</li> 
       </ul>
     </div>
