--- a/ExpCM.html
+++ b/ExpCM.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Experimentally Informed Codon Models &mdash; phydms 2.0.dev0 documentation</title>
+    <title>Experimentally Informed Codon Models &mdash; phydms 2.0.0 documentation</title>
     
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2.0.dev0',
+        VERSION:     '2.0.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,9 +24,9 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="phydms 2.0.dev0 documentation" href="index.html" />
+    <link rel="top" title="phydms 2.0.0 documentation" href="index.html" />
     <link rel="next" title="Numerical implementation" href="implementation.html" />
-    <link rel="prev" title="the phydms_testdivpressure program" href="phydms_testdivpressure_prog.html" /> 
+    <link rel="prev" title="the phydms_logoplot program" href="phydms_logoplot.html" /> 
   </head>
   <body role="document">
     <div class="related" role="navigation" aria-label="related navigation">
@@ -42,9 +42,9 @@
           <a href="implementation.html" title="Numerical implementation"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="phydms_testdivpressure_prog.html" title="the phydms_testdivpressure program"
+          <a href="phydms_logoplot.html" title="the phydms_logoplot program"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.dev0 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -265,8 +265,8 @@ Note that the mean <span class="math">\(\omega\)</span> value is then <span clas
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="phydms_testdivpressure_prog.html"
-                        title="previous chapter">the <code class="docutils literal"><span class="pre">phydms_testdivpressure</span></code> program</a></p>
+  <p class="topless"><a href="phydms_logoplot.html"
+                        title="previous chapter">the <code class="docutils literal"><span class="pre">phydms_logoplot</span></code> program</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="implementation.html"
                         title="next chapter">Numerical implementation</a></p>
@@ -304,9 +304,9 @@ Note that the mean <span class="math">\(\omega\)</span> value is then <span clas
           <a href="implementation.html" title="Numerical implementation"
              >next</a> |</li>
         <li class="right" >
-          <a href="phydms_testdivpressure_prog.html" title="the phydms_testdivpressure program"
+          <a href="phydms_logoplot.html" title="the phydms_logoplot program"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.dev0 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
