--- a/implementation.html
+++ b/implementation.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Numerical implementation &mdash; phydms 2.0.dev0 documentation</title>
+    <title>Numerical implementation &mdash; phydms 2.0.0 documentation</title>
     
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2.0.dev0',
+        VERSION:     '2.0.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <link rel="top" title="phydms 2.0.dev0 documentation" href="index.html" />
+    <link rel="top" title="phydms 2.0.0 documentation" href="index.html" />
     <link rel="next" title="phydmslib API" href="api.html" />
     <link rel="prev" title="Experimentally Informed Codon Models" href="ExpCM.html" /> 
   </head>
@@ -44,7 +44,7 @@
         <li class="right" >
           <a href="ExpCM.html" title="Experimentally Informed Codon Models"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.dev0 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.0 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -839,7 +839,7 @@ This is somewhat simpler for each individual branch length, since each individua
         <li class="right" >
           <a href="ExpCM.html" title="Experimentally Informed Codon Models"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.dev0 documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.0 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
