--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Documentation for phydms &#8212; phydms 2.0.dev6 documentation</title>
+    <title>Documentation for phydms &#8212; phydms 2.1.0 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2.0.dev6',
+        VERSION:     '2.1.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -39,7 +39,7 @@
         <li class="right" >
           <a href="installation.html" title="Installation"
              accesskey="N">next</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">phydms 2.0.dev6 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="#">phydms 2.1.0 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -125,7 +125,7 @@
         <li class="right" >
           <a href="installation.html" title="Installation"
              >next</a> |</li>
-        <li class="nav-item nav-item-0"><a href="#">phydms 2.0.dev6 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="#">phydms 2.1.0 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
