docs for version 2.1.2

--- a/genindex.html
+++ b/genindex.html
@@ -6,13 +6,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; phydms 2.0.dev6 documentation</title>
+    <title>Index &#8212; phydms 2.1.2 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2.0.dev6',
+        VERSION:     '2.1.2',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.dev6 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.1.2 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -83,6 +83,10 @@
 </li>
         <li><a href="phydmslib.html#phydmslib.models.ExpCM_fitprefs.__init__">(phydmslib.models.ExpCM_fitprefs method)</a>
 </li>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedBetaModel.__init__">(phydmslib.models.GammaDistributedBetaModel method)</a>
+</li>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.__init__">(phydmslib.models.GammaDistributedModel method)</a>
+</li>
         <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.__init__">(phydmslib.models.GammaDistributedOmegaModel method)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.YNGKP_M0.__init__">(phydmslib.models.YNGKP_M0 method)</a>
@@ -123,7 +127,7 @@
       <li><a href="phydmslib.html#phydmslib.models.DistributionModel.basemodel">basemodel (phydmslib.models.DistributionModel attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.basemodel">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.basemodel">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
       </ul></li>
       <li><a href="phydmslib.html#phydmslib.utils.BenjaminiHochbergCorrection">BenjaminiHochbergCorrection() (in module phydmslib.utils)</a>
@@ -131,7 +135,7 @@
       <li><a href="phydmslib.html#phydmslib.models.ExpCM.branchScale">branchScale (phydmslib.models.ExpCM attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.branchScale">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.branchScale">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.branchScale">(phydmslib.models.Model attribute)</a>
 </li>
@@ -155,7 +159,7 @@
       <li><a href="phydmslib.html#phydmslib.models.DistributionModel.catweights">catweights (phydmslib.models.DistributionModel attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.catweights">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.catweights">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -171,7 +175,7 @@
       <li><a href="phydmslib.html#phydmslib.models.DistributionModel.d_distributionparams">d_distributionparams (phydmslib.models.DistributionModel attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.d_distributionparams">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.d_distributionparams">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
       </ul></li>
       <li><a href="phydmslib.html#phydmslib.parsearguments.diffPrefsPrior">diffPrefsPrior() (in module phydmslib.parsearguments)</a>
@@ -181,7 +185,7 @@
       <li><a href="phydmslib.html#phydmslib.models.DistributionModel.distributedparam">distributedparam (phydmslib.models.DistributionModel attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.distributedparam">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.distributedparam">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
       </ul></li>
       <li><a href="phydmslib.html#phydmslib.models.DistributionModel">DistributionModel (class in phydmslib.models)</a>
@@ -189,7 +193,7 @@
       <li><a href="phydmslib.html#phydmslib.models.DistributionModel.distributionparams">distributionparams (phydmslib.models.DistributionModel attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.distributionparams">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.distributionparams">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
       </ul></li>
       <li><a href="phydmslib.html#phydmslib.treelikelihood.TreeLikelihood.dloglik">dloglik (phydmslib.treelikelihood.TreeLikelihood attribute)</a>
@@ -203,7 +207,7 @@
       <ul>
         <li><a href="phydmslib.html#phydmslib.models.ExpCM_fitprefs.dlogprior">(phydmslib.models.ExpCM_fitprefs method)</a>
 </li>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.dlogprior">(phydmslib.models.GammaDistributedOmegaModel method)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.dlogprior">(phydmslib.models.GammaDistributedModel method)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.dlogprior">(phydmslib.models.Model method)</a>
 </li>
@@ -217,7 +221,7 @@
       <ul>
         <li><a href="phydmslib.html#phydmslib.models.ExpCM.dM">(phydmslib.models.ExpCM method)</a>
 </li>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.dM">(phydmslib.models.GammaDistributedOmegaModel method)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.dM">(phydmslib.models.GammaDistributedModel method)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.dM">(phydmslib.models.Model method)</a>
 </li>
@@ -226,10 +230,12 @@
       </ul></li>
       <li><a href="phydmslib.html#phydmslib.treelikelihood.TreeLikelihood.dparamscurrent">dparamscurrent (phydmslib.treelikelihood.TreeLikelihood attribute)</a>
 </li>
-      <li><a href="phydmslib.html#phydmslib.models.ExpCM.dstationarystate">dstationarystate() (phydmslib.models.ExpCM method)</a>
+      <li><a href="phydmslib.html#phydmslib.models.DistributionModel.dstationarystate">dstationarystate() (phydmslib.models.DistributionModel method)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.dstationarystate">(phydmslib.models.GammaDistributedOmegaModel method)</a>
+        <li><a href="phydmslib.html#phydmslib.models.ExpCM.dstationarystate">(phydmslib.models.ExpCM method)</a>
+</li>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.dstationarystate">(phydmslib.models.GammaDistributedModel method)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.dstationarystate">(phydmslib.models.Model method)</a>
 </li>
@@ -281,7 +287,7 @@
       <li><a href="phydmslib.html#phydmslib.models.ExpCM.freeparams">freeparams (phydmslib.models.ExpCM attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.freeparams">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.freeparams">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.freeparams">(phydmslib.models.Model attribute)</a>
 </li>
@@ -296,6 +302,12 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="phydmslib.html#phydmslib.models.GammaDistributedBetaModel">GammaDistributedBetaModel (class in phydmslib.models)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel">GammaDistributedModel (class in phydmslib.models)</a>
+</li>
       <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel">GammaDistributedOmegaModel (class in phydmslib.models)</a>
 </li>
   </ul></td>
@@ -333,7 +345,7 @@
       <ul>
         <li><a href="phydmslib.html#phydmslib.models.ExpCM_fitprefs.logprior">(phydmslib.models.ExpCM_fitprefs attribute)</a>
 </li>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.logprior">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.logprior">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.logprior">(phydmslib.models.Model attribute)</a>
 </li>
@@ -351,7 +363,7 @@
       <ul>
         <li><a href="phydmslib.html#phydmslib.models.ExpCM.M">(phydmslib.models.ExpCM method)</a>
 </li>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.M">(phydmslib.models.GammaDistributedOmegaModel method)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.M">(phydmslib.models.GammaDistributedModel method)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.M">(phydmslib.models.Model method)</a>
 </li>
@@ -369,7 +381,7 @@
       <li><a href="phydmslib.html#phydmslib.models.ExpCM.mu">mu (phydmslib.models.ExpCM attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.mu">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.mu">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.mu">(phydmslib.models.Model attribute)</a>
 </li>
@@ -387,7 +399,7 @@
       <li><a href="phydmslib.html#phydmslib.models.DistributionModel.ncats">ncats (phydmslib.models.DistributionModel attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.ncats">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.ncats">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
       </ul></li>
       <li><a href="phydmslib.html#phydmslib.parsearguments.NonNegativeInt">NonNegativeInt() (in module phydmslib.parsearguments)</a>
@@ -397,7 +409,7 @@
       <li><a href="phydmslib.html#phydmslib.models.ExpCM.nsites">nsites (phydmslib.models.ExpCM attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.nsites">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.nsites">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.nsites">(phydmslib.models.Model attribute)</a>
 </li>
@@ -413,7 +425,7 @@
       <li><a href="phydmslib.html#phydmslib.models.ExpCM.PARAMLIMITS">PARAMLIMITS (phydmslib.models.ExpCM attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.PARAMLIMITS">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.PARAMLIMITS">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.PARAMLIMITS">(phydmslib.models.Model attribute)</a>
 </li>
@@ -427,7 +439,7 @@
       <li><a href="phydmslib.html#phydmslib.models.ExpCM.paramsReport">paramsReport (phydmslib.models.ExpCM attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.paramsReport">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.paramsReport">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.paramsReport">(phydmslib.models.Model attribute)</a>
 </li>
@@ -441,7 +453,7 @@
 </li>
         <li><a href="phydmslib.html#phydmslib.models.ExpCM_empirical_phi_divpressure.PARAMTYPES">(phydmslib.models.ExpCM_empirical_phi_divpressure attribute)</a>
 </li>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.PARAMTYPES">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.PARAMTYPES">(phydmslib.models.GammaDistributedModel attribute)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.YNGKP_M0.PARAMTYPES">(phydmslib.models.YNGKP_M0 attribute)</a>
 </li>
@@ -507,11 +519,17 @@
       <li><a href="phydmslib.html#phydmslib.models.ExpCM.stationarystate">stationarystate (phydmslib.models.ExpCM attribute)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.stationarystate">(phydmslib.models.GammaDistributedOmegaModel attribute)</a>
-</li>
         <li><a href="phydmslib.html#phydmslib.models.Model.stationarystate">(phydmslib.models.Model attribute)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.YNGKP_M0.stationarystate">(phydmslib.models.YNGKP_M0 attribute)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="phydmslib.html#phydmslib.models.DistributionModel.stationarystate">stationarystate() (phydmslib.models.DistributionModel method)</a>
+
+      <ul>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.stationarystate">(phydmslib.models.GammaDistributedModel method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -537,7 +555,7 @@
       <li><a href="phydmslib.html#phydmslib.models.ExpCM.updateParams">updateParams() (phydmslib.models.ExpCM method)</a>
 
       <ul>
-        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedOmegaModel.updateParams">(phydmslib.models.GammaDistributedOmegaModel method)</a>
+        <li><a href="phydmslib.html#phydmslib.models.GammaDistributedModel.updateParams">(phydmslib.models.GammaDistributedModel method)</a>
 </li>
         <li><a href="phydmslib.html#phydmslib.models.Model.updateParams">(phydmslib.models.Model method)</a>
 </li>
@@ -598,7 +616,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.0.dev6 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.1.2 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
