--- a/genindex.html
+++ b/genindex.html
@@ -6,13 +6,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Index &#8212; phydms 2.1.4 documentation</title>
+    <title>Index &#8212; phydms 2.2.0 documentation</title>
     <link rel="stylesheet" href="_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '2.1.4',
+        VERSION:     '2.2.0',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true,
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.1.4 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.2.0 documentation</a> &#187;</li> 
       </ul>
     </div>  
 
@@ -372,9 +372,11 @@
       </ul></li>
       <li><a href="phydmslib.html#phydmslib.treelikelihood.TreeLikelihood.maximizeLikelihood">maximizeLikelihood() (phydmslib.treelikelihood.TreeLikelihood method)</a>
 </li>
+      <li><a href="phydmslib.html#phydmslib.models.Model">Model (class in phydmslib.models)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="phydmslib.html#phydmslib.models.Model">Model (class in phydmslib.models)</a>
+      <li><a href="phydmslib.html#phydmslib.utils.modelComparisonDataFrame">modelComparisonDataFrame() (in module phydmslib.utils)</a>
 </li>
       <li><a href="phydmslib.html#phydmslib.parsearguments.ModelOption">ModelOption() (in module phydmslib.parsearguments)</a>
 </li>
@@ -618,7 +620,7 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.1.4 documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">phydms 2.2.0 documentation</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
